<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="40dp"
    android:scaleType="fitCenter">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:src="@drawable/ic_logo_3" />

    <TextView
        style="@style/titleAvenirFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblprofile"
        android:padding="@dimen/profile_background"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblstatus"
            android:padding="@dimen/profile_background"/>

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorMenu2"
            android:hint="@string/lblstatus"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/profile_background"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblname"
            android:padding="@dimen/profile_background"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorMenu2"
            android:hint="@string/lblname"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/profile_background"/>/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/secondTitleAvenirFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorMenu2"
            android:text="@string/lblemail"
            android:padding="@dimen/profile_background"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@color/colorMenu2"
            android:hint="@string/lblemail"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="@dimen/profile_background"/>/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryToolBar"
            android:text="@string/save"
            android:textColor="@color/white"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/enter2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryToolBar"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:visibility="invisible"/>

    </LinearLayout>


</LinearLayout>