<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="50dp"
    android:orientation="vertical"
    android:scaleType="fitCenter"
    android:layout_gravity="center_vertical"
    android:background="@drawable/ic_background">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_logo_3"
        android:layout_gravity="center_horizontal|center_vertical"/>

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/user"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@color/colorMenu2"
            android:src="@drawable/ic_login_user"
            android:textAlignment="center"
            android:drawableLeft="@drawable/ic_login_user"
            android:drawableRight="@drawable/ic_login_user"
            />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@color/colorMenu2"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_login_password"
            android:drawableRight="@drawable/ic_login_password"/>

    <Button
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryToolBar"/>



</LinearLayout>
