<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/detail_paddingBottom"
    android:paddingTop="@dimen/detail_paddingTop"
    tools:context=".Activities.MainActivity"
    tools:cardCornerRadius="4dp"
    tools:cardElevation="4dp"
    tools:cardUseCompatPadding="true"
    style="@style/AppTheme">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/order_menu_paddingTop"
        android:paddingBottom="@dimen/order_menu_paddingBottom"
        android:paddingLeft="@dimen/order_menu_paddingLeft"
        android:paddingRight="@dimen/order_menu_paddingRight">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight">
            <TextView
                style="@style/titleAvenirFont_Rose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_text"
                android:id="@+id/txtOrder"/>
            <TextView
                android:id="@+id/idorder"
                style="@style/titleAvenirFont_Rose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/txtOrder"
                android:layout_toEndOf="@+id/txtOrder" />

            <TextView
                android:id="@+id/state_of_payment"
                style="@style/secondTitleAvenirFont_Rose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state_of_payment"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_symbol_euro"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/state_of_payment"
                android:layout_toStartOf="@+id/state_of_payment"
                android:id="@+id/imageView" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/order_menu_paddingTop"
            android:paddingBottom="@dimen/order_menu_paddingBottom"
            android:paddingLeft="@dimen/order_menu_paddingLeft">

            <TextView
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_encamino_24dp"
                android:text="@string/income"
                style="@style/thirdTitleAvenirFont_Rose"
                android:paddingLeft="@dimen/order_menu_paddingLeft"
                android:paddingRight="@dimen/order_menu_paddingRight"
                />
            <TextView
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_in_restaurant"
                android:text="@string/in_restaurant"
                style="@style/thirdTitleAvenirFont_Rose"
                android:paddingLeft="@dimen/order_menu_paddingLeft"
                android:paddingRight="@dimen/order_menu_paddingRight"/>
            <TextView
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_recogido_pink_24dp"
                android:text="@string/collected"
                style="@style/thirdTitleAvenirFont_Rose"
                android:paddingLeft="@dimen/order_menu_paddingLeft"
                android:paddingRight="@dimen/order_menu_paddingRight"
                android:gravity="center_vertical" />
            <TextView
                android:layout_weight="0.25"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_ok_pink_24dp"
                android:text="@string/finished"
                style="@style/thirdTitleAvenirFont_Rose"
                android:paddingLeft="@dimen/order_menu_paddingLeft"
                android:paddingRight="@dimen/order_menu_paddingRight"/>

        </LinearLayout>

    </LinearLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/imgRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_pedidos_iconorestaurante" />

            <TextView
                android:id="@+id/restaurant_name"
                style="@style/titleAvenirFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgRestaurant"
                android:text="@string/restaurant_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/time_left_of_order"
                android:src="@drawable/ic_pedidos_horarecogida" />

            <TextView
                android:id="@+id/time_left_of_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text=""
                style="@style/secondTitleAvenirFont"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">


            <TextView
                android:id="@+id/restaurant_direction"
                style="@style/secondmapFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_restaurant"
                android:paddingLeft="@dimen/detail_paddingLeft"
                android:paddingRight="@dimen/detail_paddingLeft"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="39dp"
                android:layout_marginStart="39dp" />

            mageView
                android:id="@+id/imgPhoneRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_phone_white_24dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/blockExtra"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_paddingBottom"
            android:background="@color/white"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

            <ImageView
                android:id="@+id/imgHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_client_white_24dp" />

            <TextView
                android:id="@+id/customer_name"
                style="@style/titleAvenirFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgHome"
                android:text="@string/customer_name" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/hour_order"
                android:src="@drawable/ic_pedidos_horapedido" />

            <TextView
                android:id="@+id/hour_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/secondTitleAvenirFont"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100px"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/customer_direction"
                style="@style/secondmapFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_customer"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp" />

       </RelativeLayout>
        <RelativeLayout
            android:id="@+id/blockExtra2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_paddingBottom"
            android:background="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relLay_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

            <TextView
                style="@style/titleAvenirFont"
                android:paddingBottom="@dimen/detail_paddingBottom"
                android:paddingRight="@dimen/detail_paddingRight"
                android:paddingTop="@dimen/detail_paddingTop"
                android:text="@string/customer_observation"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
                android:id="@+id/imgbtn_obs_client"
                android:background="@color/colorAccent"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/blockExtra3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/card_paddingBottom"
            android:background="@color/white"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent">

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="@dimen/detail_paddingTop"
            android:paddingLeft="@dimen/detail_paddingLeft"
            android:paddingRight="@dimen/detail_paddingRight"
            android:background="@color/colorAccent"
            android:paddingBottom="@dimen/detail_paddingBottom">
            <Button
                android:id="@+id/accept"
                android:text="@string/button_accept"
                android:paddingLeft="@dimen/card_paddingLeft"
                android:paddingRight="@dimen/card_paddingRight"
                style="@style/thirdTitleAvenirFont_Rose"
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:paddingLeft="@dimen/card_paddingLeft"
                android:paddingRight="@dimen/card_paddingRight"
                android:layout_marginLeft="40dp"
                style="@style/thirdTitleAvenirFont_Rose"
                android:background="@color/white"
                android:gravity="center_vertical|right"
                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>



